Add edit and delete dish endpoint
